Sessão Sonet SDH incorportada ao arquivo Cap.2.tex

--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -1,26 +1,39 @@
+%Deprecated!!!!
+%Movido para Cap2.tex
+% 
+% NÃO EDITAR AQUI!!!!
 
-A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão óptica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a SONET enquanto as recomendações ITU-T G.691, ITU-T G.707 e ITU-T G.781 são exemplos relacionados ao padrão SDH.
 
-SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
+
+
+
+
+
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão óptica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias. Finalmente, em 1988 alcançou-se um acordo, então o \ac{CCITT} definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105~\cite{T1.105}, ANSI T1.106 e ANSI T1.117 são exemplos de publicações que definem parâmetros relacionados a \ac{SONET} enquanto as recomendações ITU-T G.691~\cite{G691.1}, ITU-T G.707~\cite{G707} e ITU-T G.781~\cite{G781} são exemplos relacionados ao padrão SDH.
+
+Assim, \ac{SONET} e \ac{SDH} guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras ópticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia \ac{PDH}, podem ser destacados as seguintes vantagens:
 
 \begin{itemize}
+%Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede.
+\item {\bf Simplificações no processo de multiplexação:}  A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados, bem como aumenta a confiabilidade do sistema como um todo. Dessa forma, os nós da rede tem \textit{clock} sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre a carga útil (\textit{payload}). O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2010}.
 
-\item {\bf Simplificações no processo de multiplexação:} Como já visto anteriormente, o processo de retirada de sinais tributários de baixas taxas de um sinal multiplexado de taxa superior é uma operação difícil na tecnologia PDH, devido ao fato de que são necessárias demultiplexações e multiplexações sucessivas para se poder localizar o tributário requerido, retirá-lo e então remontar o frame de alta taxa. Isso acaba implicando em altos custos de instalação da rede PDH e em baixa confiabilidade devido a quantidade de dispositivos eletrônicos envolvidos nos nós aos longo da rede. A estrutura de multiplexação síncrona de SONET/SDH permite significativa redução de complexidade e custos relacionados ao processo de extração e inserção de tributários em sinais multiplexados bem como aumenta a confiabilidade do sistema como um todo. Isso porque nas redes SONET/SDH, todos os nós da rede tem clock sincronizados, de modo que as taxas de transmissão são simplesmente múltiplos de um valor base e não se é necessário o preenchimento de um tributário com bits vazios para possibilitar a multiplexação, como era necessário na tecnologia PDH. Assim, a extração de um sinal tributário de um sinal de alta taxa é simplificada. Esse processo é ainda mais simplificado devido a utilização de um \textit{frame} que permite serem inseridas maiores informações sobre o \textit{payload}. O processo de inserção de tributários também se torna simplificado, já que os sinais possuem taxas de transmissão muito mais precisas e próximas umas das outras do que na tecnologia PDH~\cite{Ramaswami2010}.
+\item{\bf Informações de Gerenciamento:} recursos de monitoramento, gerenciamento e controle foram incorporados no \textit{frame} dos padrões SONET e SDH oferecem campos específicos a atividade de monitoramento e gestão da comunicação.
 
-\item{\bf Informações de Gerenciamento:} Os padrões SONET e SDH oferecem maiores recursos de monitoramento, gerenciamento e controle do que está presente nas redes PDH. Como será visto mais adiante, o \textit{frame} dos padrões SONET e SDH oferecem campos específicos a atividade de monitoramento e gestão da comunicação.
+\item{\bf Interoperabilidade:} define interfaces e parâmetros padronizados para que haja interoperabilidade entre equipamentos de diferentes fornecedores.
+%É difícil tratar de conceitos de telecomunicações sem levar em consideração um dos princípios básicos dessa área que é a Interoperabilidade. Anteriormente foi mencionado que isto era um problema nos sistemas PDH, pois diferentes fornecedores de equipamentos utilizavam interfaces e codificações distintas, dificultando a compatibilidade ao longo da rede. SONET e SDH são padrões que tentam eliminar este problema por meio da definição de parâmetros padrões, como as interfaces.
 
-\item{\bf Interoperabilidade:} É difícil tratar de conceitos de telecomunicações sem levar em consideração um dos princípios básicos dessa área que é a Interoperabilidade. Anteriormente foi mencionado que isto era um problema nos sistemas PDH, pois diferentes fornecedores de equipamentos utilizavam interfaces e codificações distintas, dificultando a compatibilidade ao longo da rede. SONET e SDH são padrões que tentam eliminar este problema por meio da definição de parâmetros padrões, como as interfaces.
+\item{\bf Disponibilidade da rede:} Novos recursos de recuperação de falhas e proteção foram padronizados.
 
-\item{\bf Disponibilidade da rede:} SONET e SDH são padrões que evoluíram para acomodar específicas topologias de rede e técnicas de proteção e protocolos associados para possibilitar altos níveis de disponibilidade. Como consequência, a atuação da proteção é em geral mais rápida do que nas redes PDH. 
+%SONET e SDH são padrões que evoluíram para acomodar específicas topologias de rede e técnicas de proteção e protocolos associados para possibilitar altos níveis de disponibilidade. Como consequência, a atuação da proteção é em geral mais rápida do que nas redes PDH. 
 
 
 \end{itemize} 
 
-A seguir, serão abordadas características importantes referentes a SDH. Porém, os conceitos também se aplicam ao padrão SONET, visto que SDH foi desenvolvido a partir do mesmo.
+%A seguir, serão abordadas características importantes referentes a SDH. Porém, os conceitos também se aplicam ao padrão SONET, visto que SDH foi desenvolvido a partir do mesmo.
 
-\subsection{Multiplexação SONET}
+%\subsection{Multiplexação SONET}
 
-Ambos SONET e SDH usam métodos de multiplexação bastante sofisticados que podem ser implementados em circuitos integrados de longa escala. Comparando a figura \ref{fig:muxSDH} com a figura \ref{fig:muxPDH}, é possível notar a diferença de complexidade entre as redes SONET/SDH e PDH. Somente um componente é necessário para fazer o que a ``montanha de multiplexadores'' faz no PDH.
+Ambos \ac{SONET} e \ac{SDH} usam métodos de multiplexação bastante sofisticados que podem ser implementados em circuitos integrados de longa escala. Comparando a Figura \ref{fig:muxSDH} com a Figura \ref{fig:muxPDH}, é possível notar a diferença de complexidade entre as redes SONET/SDH e PDH. Somente um componente é necessário para fazer o que a ``montanha de multiplexadores'' faz no PDH.
 
 Para SONET a taxa de sinal básica é $51,84 \, Mb/s$, chamada de \textit{synchronous transport signal level-1} ou STS-1. As outras taxas derivadas desta são chamadas STS-N e são obtidas alternando os bytes de N  \textit{frames} STS-1 alinhados. Como os \textit{clocks} dos sinais são sincronizados, não há necessidade de inserção de bits. Por esse mesmo motivo, sinais de taxas menores podem ser extraídos de um fluxo multiplexado sem necessidade de demultiplexar o sinal inteiro. A tabela \ref{tab:taxasSONET} traz as taxas de transmissão e nomenclatura SONET.
 
