--- a/cap2.tex
+++ b/cap2.tex
@@ -45,7 +45,7 @@ O \ac{PDH} utiliza uma multiplexação assíncrona, na qual cada terminal tem seu p
 \label{sec:sdh}
 %\input{sectionSonetSDH}
 
-A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão ótica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117 definem o padrão SONET, enquanto as recomendações ITU-T G.691, ITU-T G.707 e ITU-T G.781 padronizam o SDH. 
+A tecnologia de transporte PDH, que foi introduzida para atender a demanda de multiplexação de canais de voz, apresentava uma série de limitações tecnológicas e operacionais, o que fez com que na década de 1980 fornecedores de serviços de telecomunicações e fabricantes de equipamentos buscassem novos padrões de transmissão e multiplexação, com foco na transmissão ótica. Em 1984, a associação americana chamada \ac{ECSA} iniciou trabalhos com a finalidade de desenvolvimento de um padrão que atendesse as necessidades das telecomunicações essencialmente nos Estados Unidos, propondo-o ao \ac{ANSI} e no ano de 1985, já se tinham resultados que conduziram ao início da padronização da tecnologia de transporte em redes de telecomunicações chamada de \ac{SONET}~\cite{Ballart2002}, adotado em países como Estados Unidos, Canada e Japão. O  \ac{CCITT}, atualmente conhecido como \ac{ITU-T}, demonstrou interesse pelo padrão \ac{ANSI}~\cite{Boehm1990} e propôs mudanças para a acomodação de ambas as hierarquias de taxas de transmissão americanas e europeias e finalmente em 1988 alcançou-se um acordo, de modo que o órgão CCITT definiu o padrão conhecido como \ac{SDH}, amplamente adotado na Europa e também no Brasil. As recomendações ANSI T1.105, ANSI T1.106 e ANSI T1.117~\cite{Zhang2001} definem o padrão SONET, enquanto as recomendações ITU-T G.691~\cite{G691.1}, ITU-T G.707~\cite{G707} e ITU-T G.781~\cite{G781} padronizam o SDH. 
 
 SONET e SDH guardam os mesmos conceitos tecnológicos e as principais diferenças se situam em certas denominações de parâmetros e nas taxas de transmissão definidas nas hierarquias. Esses dois padrões foram desenvolvidos visando a comunicação por meio de fibras óticas mas, por exemplo, SDH foi também utilizado em sistemas baseados em radio-frequência. Comparando estes dois padrões com a tecnologia PDH, podem ser destacados as seguintes vantagens:
 
@@ -163,7 +163,7 @@ O \textit{frame} SDH é formado por duas principais partes, sendo elas o cabeçalh
 
 \end{itemize}
 
-\subsection{Camadas de SDH}
+\subsection{Camadas do padrão SDH}
 
 A tecnologia SDH apresenta uma estruturação em camadas como apresentada na Figura~\ref{fig:SDHlayers}. Através de tal figura pode ser percebido que SDH possui quatro camadas, sendo elas a Camada de Via (\textit{Path layer}), Camada de Seção de Multiplexação (\textit{Multiplex Section Layer}), Camada de Seção de Regeneração (\textit{Regeneration Section Layer}) e Camada Física (\textit{Physical Layer}). Com exceção da Camada Física, as camadas possuem um conjunto de \textit{bytes} no \textit{Overhead} a que são relacionados e que são utilizadas para a realização de diversas funcionalidades, como avaliação de desempenho~\cite{Alwayn2004}.
 
@@ -172,7 +172,7 @@ O conceito de via em SDH se refere a uma conexão lógica entre o ponto em que se 
 \begin{figure}[!htb]
  \centering
  \includegraphics[scale=.7]{SDHlayers.png}
-  \caption{Estruturação em Camadas de SDH - ~\cite{BernalFilho2003}.}
+  \caption{Estruturação em Camadas do padrão SDH - ~\cite{BernalFilho2003}.}
  \label{fig:SDHlayers}
 \end{figure}
 
@@ -185,7 +185,7 @@ Por sua vez, a Camada de Seção de Regeneração é utilizada entre elementos adjace
 \begin{figure}[!htb]
  \centering
  \includegraphics[scale=.7]{SDHlayersConection.png}
-  \caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - ~\cite{BernalFilho2003}.}
+  \caption{Relacionamento Longitudinal entre as Camadas nos Elementos de Rede~\cite{BernalFilho2003}.}
  \label{fig:SDHlayersConection}
 \end{figure} 
 
