temporariamente comentado Resumo e Abstract

--- a/work.tex
+++ b/work.tex
@@ -164,10 +164,10 @@
 %insere o resumo e abstract
 %\addcontentsline{toc}{chapter}{\numberline{}Resumo \& Abstract}
 \addcontentsline{toc}{chapter}{\numberline{}Resumo}
-\include{resumo}
+%\include{resumo}
 \clearemptydoublepage
 \addcontentsline{toc}{chapter}{\numberline{}Abstract}
-\include{abstract}
+%\include{abstract}
 
 \clearemptydoublepage
 %------------------------------------------------------------------------
