--- a/Conclusao.tex
+++ b/Conclusao.tex
@@ -3,4 +3,4 @@
 
 Este trabalho teve como intuito abordar as tecnologias de transporte em redes ópticas e apresentar conceitos relacionados ao seu gerenciamento. É possível perceber que o aumento do tráfego de dados impulsiona a geração de novas tecnologias de transporte para redes de telecomunicações, em especial sobre a infraestrutura de fibras ópticas. Por volta da década de 1960, os sistemas de telecomunicações tinham como intuito atender simplesmente as necessidades dos canais telefônicos através de PDH, mas o aumento da demanda por serviços aliados as dificuldades técnicas de PDH conduziram ao desenvolvimento de novas tecnologias de transporte como SONET e SDH, ambos voltados a aplicação sobre fibras ópticas. Com o avanço e a maturidade das tecnologias de comunicações ópticas juntamente com o processo de convergência dos serviços de telecomunicações, passou-se a ser necessário a evolução ainda maior dos sistemas de transporte bem como a integração entre as redes, surgindo então GMPLS e OTN. Atualmente percebe-se um grande interesse sobre o conceito de SDN, que traz um novo paradigma as redes de transporte por meio da possibilidade de flexibilidade de rearranjo da rede, dentre outros fatores. 
 
-Conceitos de flexibilidade, escalabilidade, programabilidade e redução de custos em paralelo com a sempre crescente demanda de velocidade e qualidade dos serviços de telecomunicações se apresentam como desafios inerentes as tecnologias de transporte e gerenciamento das redes no cenário atual, onde OTN e SDN demonstram ser as opções escolhidas por parte dos fornecedores de serviços para solucionar as necessidades sempre utilizando como meio físico primordial as fibras ópticas.  
+Conceitos de flexibilidade, escalabilidade, programabilidade e redução de custos em paralelo com a sempre crescente demanda de velocidade e qualidade dos serviços de telecomunicações se apresentam como desafios inerentes as tecnologias de transporte e gerenciamento das redes no cenário atual, onde OTN e SDN demonstram ser as opções escolhidas por parte dos fornecedores de serviços para solucionar as necessidades sempre utilizando como meio físico primordial as fibras ópticas.  :q
