modificacoes na capa e pequenas correções

--- a/cap3/cap3.tex
+++ b/cap3/cap3.tex
@@ -43,7 +43,7 @@ A arquitetura da \ac{OTN} define duas classes de interfaces de acordo com os dom
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=.6]{./cap3/interfaces.png}
+ \includegraphics[scale=.6]{./cap3/otn_interfaces.png}
  % otn_interfaces.png: 3273x873 pixel, 300dpi, 27.71x7.39 cm, bb=
  \caption{Exemplo de uma estrutura de domínios para interfaces da rede de transporte ótico (OTN).}
  \label{fig:otn_interfaces}
