--- a/capa.tex
+++ b/capa.tex
@@ -9,7 +9,8 @@
 \begin{normalsize}
 	\textbf{Universidade Estadual de Campinas - UNICAMP} \\ \vspace{1ex}
 	\textbf{Faculdade de Eng. Elétrica e de Computação - FEEC} \\ \vspace{1ex}
-	\textbf{Disciplina IE008 - Redes Óticas} \\ \vspace{2ex}
+	\textbf{Disciplina IE008 - Redes Óticas} \\ \vspace{1ex}
+	\textbf{Prof. Felipe Rudge} \\ \vspace{2ex}
 \end{normalsize}
 \end{center}
 }
