--- a/cap2.tex
+++ b/cap2.tex
@@ -1,5 +1,7 @@
-\chapter{Tecnologia Transporte}
+\chapter{Primeiras Tecnologias Óticas de Transporte}
 \label{cap:technology}
+
+Neste Capítulo são apresentados as primeiras tecnologias de transporte utilizadas em redes óticas.
 
 \section{Hierarquia Digital Plesiócrona - PDH}
 \label{sec:pdh}
