--- a/referencias.bib
+++ b/referencias.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.10.
+/% This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
 
@@ -398,18 +398,6 @@
   Timestamp                = {2010.03.18}
 }
 
-@Misc{G781,
-  Title                    = {{Synchronization Layer Functions}},
-
-  Author                   = {{ITU-T}},
-  HowPublished             = {Recommendation ITU-T G.781},
-  Month                    = jun,
-  Year                     = {1999},
-
-  Owner                    = {alaelson},
-  Timestamp                = {2010.03.18}
-}
-
 @Misc{ITUT1998,
   Title                    = {{Optical Interfaces for Multichannel Systems with Optical Amplifiers}},
 
@@ -691,6 +679,17 @@
   Note                     = {Acesso em junho de 2015}
 }
 
+@Misc{ODL2015,
+  Title                    = {The OpenDaylight project},
+
+  Author                   = {{The Linux Foundation}},
+  Year                     = {2015},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2015.06.22},
+  Url                      = {http://www.opendaylight.org/}
+}
+
 @Misc{Walker2007,
   Title                    = {{Optical Transport Network (OTN) Tutorial}},
 
@@ -739,7 +738,7 @@
 
 @Misc{Padtec,
   Title                    = {{Padtec S/A}},
-  Note                     = {{\'}Ultimo acesso em 22 de julho de 2011},
+  Note                     = {Acesso em julho de 2015},
 
   Owner                    = {alaelson},
   Timestamp                = {2010.03.30},
@@ -760,20 +759,32 @@
 }
 
 @incollection{Zhang2001,
-title = "Chapter 12 - Networking with Optics ",
-editor = "Yin, Francis T.S. YuSuganda JutamuliaShizhuo ",
-booktitle = "Introduction to Information Optics ",
-publisher = "Academic Press",
-edition = "",
-address = "San Diego",
-year = "2001",
-pages = "667 - 717",
-series = "Optics and Photonics",
-issn = "15575837",
-doi = "http://dx.doi.org/10.1016/B978-012774811-5/50012-8",
-url = "http://www.sciencedirect.com/science/article/pii/B9780127748115500128",
-author = "Lintao Zhang and Guohua Xiao and Shudong Wu"
+  title = "Chapter 12 - Networking with Optics ",
+  editor = "Yin, Francis T.S. YuSuganda JutamuliaShizhuo ",
+  booktitle = "Introduction to Information Optics ",
+  publisher = "Academic Press",
+  edition = "",
+  address = "San Diego",
+  year = "2001",
+  pages = "667 - 717",
+  series = "Optics and Photonics",
+  issn = "15575837",
+  doi = "http://dx.doi.org/10.1016/B978-012774811-5/50012-8",
+  url = "http://www.sciencedirect.com/science/article/pii/B9780127748115500128",
+  author = "Lintao Zhang and Guohua Xiao and Shudong Wu"
 }
+
+@Misc{G781,
+  Title                    = {{Synchronization Layer Functions}},
+  Author                   = {{ITU-T}},
+  HowPublished             = {Recommendation ITU-T G.781},
+  Month                    = jun,
+  Year                     = {1999},
+  Owner                    = {alaelson},
+  Timestamp                = {2010.03.18}
+}
+
+
 
 @comment{jabref-meta: selector_publisher:}
 
